kubernetes/03-实践记录/minio-storage-NO.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
