kubernetes/03-实践记录/prometheus-storage.yaml
#用于存储grafana数据

# mkdir -p /data/grafana
# chmod 777 /data/grafana
# cat >>  /etc/exports << EOF
# /data/grafana  *(rw,sync,no_root_squash,no_all_squash)
# EOF
# exportfs -rv
# systemctl restart rpcbind
# systemctl restart nfs-server
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
